Bug 84929 - EDITING: Clicking in the footer area brings focus/view to last cursor position on page
Summary: EDITING: Clicking in the footer area brings focus/view to last cursor positio...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0 beta1
Hardware: All All
: lowest trivial
Assignee: Justin L
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: notBibisectable, regression
Depends on:
Blocks: Writer-View-Jumps
  Show dependency treegraph
 
Reported: 2014-10-12 08:37 UTC by Gabriel Diosan
Modified: 2020-06-16 16:58 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast (561.73 KB, video/webm)
2014-12-21 15:30 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Diosan 2014-10-12 08:37:58 UTC
When adding a footer to a new Libreoffice Writer document, the focus jumps back to the top of the page.

Steps to reproduce:

1. Open Libreoffice Writer.
2. Scroll to the bottom of the page and click on the footer area to create a footer.

Current outcome: 

The focus/view will jump straight back to the cursor at the top of the page requiring you to scroll back down to the bottom of the page again.

This is only really evident when you create the footer before editing the rest of the document. When you scroll back down to the bottom of the page the footer pop up is visible and you can then create the footer. It is not a massive problem but minor annoyance in certain circumstances as you need to scroll more.

Expected outcome:

The focus/view should remain on the bottom of the page when clicking on the footer area so you can create the footer and input text etc.

Can be noticed in Libreoffice 4.2, 4.3 and 4.4 across Windows and Linux operation systems. I have not tested on MacOSX but I would guess it is present there as well.
Comment 1 Yousuf Philips (jay) (retired) 2014-10-12 12:47:11 UTC
Hi Gabriel,

This was a bug that had been disturbing me for a while but i never ended up reporting it. :D

Confirmed on master. It is a regression as it works correctly in 3.6.7.

Version: 4.4.0.0.alpha0+
Build ID: 227ca23324fabd77abae1b7eb6186ba11d519fae
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-09_14:20:58
Comment 2 Dave Richards 2014-12-08 16:54:51 UTC
Unless I have used the wrong technique, I have not been able to make this work going all the way back through the bibisect files.  I scroll to the bottom and then click into the area below the entry canvas.  This is where the footer appears when you do an insert > footer.  In all versions tested, it then bounces back to the top of the document.

So either I am testing it incorrectly, or this pre-dates the bibisect files. 

Will monitor this issue if anyone has more notes or thoughts on versions that worked.  If I can see it and it's newer than 3.5, I can bibisect it.
Comment 3 Matthew Francis 2014-12-21 15:19:51 UTC
I also can't find any version in the bibisect repos that behaves as described. Assuming for the sake of argument that this is a regression, it doesn't appear to be readily bibisectable, but I suspect that this is more properly an enhancement request

Setting Whiteboard:notBibisectable
Comment 4 Yousuf Philips (jay) (retired) 2014-12-21 15:30:09 UTC
Created attachment 111109 [details]
screencast

Here is a screencast of 3.6.7 showing it works and 4.0.6 showing it doesnt work. Tested it also on windows 7 and its the same thing.
Comment 5 Yousuf Philips (jay) (retired) 2014-12-22 14:32:55 UTC
I just tested 4.0.0 beta 1 and its broken there.

Version 4.0.0.0.beta1 (Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7)
Comment 6 Gordo 2015-03-09 19:19:05 UTC
Here is some additional information on the behaviour:

1. New Text Document.
2. View -> Zoom -> Entire Page.
3. Click on footer area.
Expected Result:
Footer pop up is correctly shown.
Result:
Footer pop up is correctly shown.

1. New Text Document.
2. View -> Zoom -> Page Width. (Or zoom so that entire page is not on screen).
3. Scroll to bottom of page.
4. Click on footer area.
Expected Result:
Footer pop up is correctly shown.
Result:
Page scrolls to top of page and cursor appears at the end of the text on the page.
Alternate:
3. Type one word.
4. Place cursor in text at either a, b, or c:
a. beginning of text and scroll to bottom of page.
b. middle of text and scroll to bottom of page.
c. end of text and scroll to bottom of page.
5. Click on footer area.
Expected Result:
Footer pop up is correctly shown.
Result:
Page scrolls to top of page and cursor appears at the end of the text on the page.

1. New Text Document.
2. View -> Zoom -> Page Width. (Or zoom so that entire page is not on screen).
3. Enter enough text so that bottom of page and text are visible.
4. Place cursor in text at either a, b, or c:
a. beginning of text and scroll to bottom of page.
b. middle of text and scroll to bottom of page.
c. end of text.
5. Click on footer area.
Expected Result:
Footer pop up is correctly shown.
Result:
Footer pop up is correctly shown and cursor appears at the end of the text on the page.

The scrolling behaviour happens because the cursor is being positioned at the end of the text on the page after clicking on the footer area and also because the cursor position is off screen from the footer when the focus is changed.

Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Comment 7 Robinson Tryon (qubit) 2015-12-10 01:26:33 UTC Comment hidden (obsolete)
Comment 8 QA Administrators 2017-01-03 19:40:59 UTC Comment hidden (obsolete)
Comment 9 Gabriel Diosan 2017-01-20 03:18:57 UTC
Tested with LibreOffice 5.2.3 on Korora 25 and this behaviour is still present.

Gabriel
Comment 10 Telesto 2017-04-27 12:44:05 UTC
Confirming with:
Version: 5.4.0.0.alpha0+
Build ID: a917902c48f21d04039da86048c5c36555137d7e
CPU threads: 4; OS: Windows 6.2; UI render: default; 
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2017-04-24_23:35:22
Comment 11 QA Administrators 2018-04-28 02:32:14 UTC Comment hidden (obsolete, spam)
Comment 12 Justin L 2019-11-08 09:23:36 UTC
I just noticed this as well - surprised I didn't see it earlier because it is really annoying. Still exists in LO 6.4 alpha.
Comment 13 Justin L 2019-11-14 14:01:35 UTC
proposed fix at https://gerrit.libreoffice.org/8270
Comment 14 Commit Notification 2019-11-21 11:21:17 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/342a5890dbcddccb4013e201e3ff3d9e6967e733

tdf#84929 sw UI: stay at footer when showing control

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2019-11-21 14:31:53 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/fee310ddda7ea7452107b9528776cbcc7c7db9f0

tdf#84929 sw UI: stay at footer when showing control

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.