tdf#84929 sw UI: stay at footer when showing control

Scenario: a new document where the first thing the user wants
to do is create a footer. Scroll down to the bottom of the page
(this does mean that you can't see the top of the page, right?
None of my screens show an entire page by default anyway...)
and click in the footer area. The screen jumps back to the top
of the page and the user needs to scroll to the bottom again
in order to enable the footer.

So, in the very specific case of the control being turned on
(because I don't care about a jump if the control is being
turned off) don't process a return to the cursor position.

Regression potential:
The only use case I can think of is someone trying to
drag a section by starting too low on the page. The early return
will quickly cancel any kind of drag attempt. Basically if the user
clicks in the footer area without intending to get the
separator bar, it might act differently than what previously
happened. I don't really see this scenario as a problem.

One additional limitation could be added to only apply this
if it is dealing with the footer, since in the case of a
header there would be no screen-jump.

Change-Id: I11cd3089b85d8eb49063b902e6bf8bf2e1412aa7
Reviewed-on: https://gerrit.libreoffice.org/82701
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>